tests/NormalTests/paczka1/small_fuzzy/45217458.err
Error in line 7: tqd0Z7V A685 32,6
Error in line 8: tqd0Z7V S734 52,2
